chore(new) area code added to user profile
